@@ -332,22 +332,68 @@ igraph.to.graphNEL <- function(graph) {
   res
 }
 
-get.incidence <- function(graph, types=NULL, sparse=FALSE) {
-  # Argument checks
-  if (!is.igraph(graph)) { stop("Not a graph object") }
-  if (is.null(types) && "type" %in% list.vertex.attributes(graph)) { 
-  types <- V(graph)$type 
-  } 
-  if (!is.null(types)) { 
-  types <- as.logical(types) 
-  } else { 
-  stop("Not a bipartite graph, supply `types' argument") 
-  }
-
+get.incidence.dense <- function(graph, types) {
+    
   on.exit( .Call("R_igraph_finalizer", PACKAGE="igraph") )
   # Function call
   res <- .Call("R_igraph_get_incidence", graph, types,
         PACKAGE="igraph")
+  rownames(res$res) <- res$row_ids
+  colnames(res$res) <- res$col_ids
+  res$res
+}
+
+get.incidence.sparse <- function(graph, types) {
+
+  vc <- vcount(graph)
+  if (length(types) != vc) {
+    stop("Invalid types vector")
+  }
+  
+  require(Matrix)
+  el <- get.edgelist(graph, names=FALSE)
+  if (any(types[el[,1]+1] == types[el[,2]+1])) {
+    stop("Invalid types vector, not a bipartite graph")
+  }
+
+  n1 <- sum(!types)
+  n2 <- vc-n1
+
+  recode <- numeric(vc)
+  recode[!types] <- seq_len(n1)
+  recode[types]  <- seq_len(n2) + n1
+
+  el[,1] <- recode[el[,1]+1]
+  el[,2] <- recode[el[,2]+1]
+
+  change <- el[,1] > n1
+  el[change,] <- el[change,2:1]
+  el[,2] <- el[,2]-n1
+
+  value <- rep(1, nrow(el))
+
+  res <- spMatrix(n1, n2, i=el[,1], j=el[,2], x=value)
+  rownames(res) <- which(!types)-1
+  colnames(res) <- which(types)-1
   res
+}
+
+get.incidence <- function(graph, types=NULL, sparse=FALSE) {
+  # Argument checks
+  if (!is.igraph(graph)) { stop("Not a graph object") }
+  if (is.null(types) && "type" %in% list.vertex.attributes(graph)) { 
+    types <- V(graph)$type 
+  } 
+  if (!is.null(types)) { 
+    types <- as.logical(types) 
+  } else { 
+    stop("Not a bipartite graph, supply `types' argument") 
+  }
+
+  if (sparse) {
+    get.incidence.sparse(graph, types=types)
+  } else {
+    get.incidence.dense(graph, types=types)
+  }
 }
 
