@@ -1,5 +1,8 @@
 2008-11-02  Gabor Csardi  <csardi@szaffi>
 
+	* interfaces/R/igraph/R/conversion.R (get.incidence) : updated,
+	sparse matrix support was added
+
 	* interfaces/R/igraph/R/conversion.R (get.incidence) : added
 
 	* interfaces/R/igraph/R/structure.generators.R
